--- a/src/style/DetailPage.scss
+++ b/src/style/DetailPage.scss
@@ -88,3 +88,16 @@
         font-family: 'NanumSquare', sans-serif, bold;
     }
 }
+
+.ul-btn {
+        width: 150px;
+        height: 30px;
+        border: none;
+        border-radius: 8px;
+        background-color: #69a65f;
+        color: white;
+        font-weight: bold;
+        font-size:14px;
+        cursor: pointer;
+        font-family: 'NanumSquare', sans-serif, bold;   
+}
