--- a/src/style/FindPage.scss
+++ b/src/style/FindPage.scss
@@ -55,33 +55,33 @@
     padding-left: 0.5%;
     padding-right: 0.5%;
     margin-top: 1.0%;
-    
+    margin-bottom: 0%;
     background-color: #eef5ed;
     
 
     .find-pie {
-        width: 32%;
-        float: left;
+        width: 23%;
+        height: 30;
+        float: right;
         background-color: #eef5ed;
-        border-radius: 10px 0px 0px 10px;
+        border-radius: 0px 10px 10px 0px;
 
         .find-pie-p1 {
-            margin-left: 0px;
-            padding-top: 2%;
-            padding-left: 5.4%;
+            padding-top: 5%;
             color: #376330;
         }
     }
 
     .find-bar {
-        width: 68%;
-        float: right;
+        width: 77%;
+        height: 30%;
+        float: left;
         background-color: #eef5ed;
-        border-radius: 0px 10px 10px 00px;
+        border-radius: 10px 0px 0px 10px;
 
         .find-bar-p1 {
             padding-top: 1%;
-            padding-left: 30%;
+            padding-left: 20%;
             color: #376330;
         }
     }
