--- a/src/style/DetailPage.scss
+++ b/src/style/DetailPage.scss
@@ -61,6 +61,11 @@
         cursor: pointer;
         font-family: 'NanumSquare', sans-serif, bold;
     }
+
+    .sc-div {
+        float: left;
+        // position: relative;
+    }
 }
 
 .title-btn{
