--- a/App/app/src/main/res/layout/activity_miss.xml
+++ b/App/app/src/main/res/layout/activity_miss.xml
@@ -96,7 +96,7 @@
         android:layout_width="371dp"
         android:layout_height="655sp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="6sp"
         android:layout_marginEnd="1dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
