--- a/App/app/src/main/res/layout/activity_search.xml
+++ b/App/app/src/main/res/layout/activity_search.xml
@@ -132,7 +132,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/searchrecycle"
         android:layout_width="370sp"
-        android:layout_height="502dp"
+        android:layout_height="502sp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="11dp"
         android:layout_marginEnd="15dp"
