--- a/App/app/src/main/res/layout/missboard.xml
+++ b/App/app/src/main/res/layout/missboard.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="2dp"
+    android:layout_marginRight="2dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/detail_img"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-         />
-
-    <TextView
-        android:id="@+id/textImg"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#b4c5b0"
-        android:gravity="center"
-        android:text="주소"
-        android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textImg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#b4c5b0"
+            android:gravity="center"
+            android:text="주소"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_img" />
+
+        <ImageView
+            android:id="@+id/detail_img"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
